# MessengerDesktop

./: .gitignore  .gitmodules  AuthWindow.qml  CMakeLists.txt  CodeInput.qml  MainWindow.qml  MessengerDesktop_en_US.ts  NumberInput.qml  SideChatEntry.qml  Theme.qml  qml.qrc
src/: api.h  main.cpp  main.cpp.fDwmaN  phonenumberformatterservice.cpp  phonenumberformatterservice.h  settings.cpp  settings.h
src/api/: api.cpp  api.h  apirequest.cpp  apirequest.h  apiresult.cpp  apiresult.h  getserverprefsrequest.cpp  getserverprefsrequest.h  jwt.cpp  jwt.h  promise.cpp  promise.h
src/api/requests/: getserverprefsrequest.cpp  getserverprefsrequest.h
src/data/: settings.cpp  settings.h
src/misc/: apipromise.cpp  apipromise.h  phonenumberformatterservice.cpp  phonenumberformatterservice.h  promise.cpp  promise.h  restarter.cpp  restarter.h
src/qml/: qml.qrc
src/qml/chat/: Chat.qml  ChatWindow.qml  SidePanel.qml
src/qml/config/: Constants.qml
src/qml/intro/: CodeInput.qml  IntroStage.qml  IntroWindow.qml  NumberInput.qml  RegisterInput.qml  ServerDetailsInput.qml
src/qml/misc/: NumberTextField.qml
